--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -21,12 +21,67 @@ header {
     display: flex;
     background-color: white;
     justify-content: space-around;
-    width: 400px; /* contoh, bisa diatur sesuai kebutuhan */
+    width: 400px;
     align-items: center;
 }
+
 .notes-search {
     border: 1px solid grey;
     padding: 1em;
     border-radius: 20px;
-    width: 250px;
+    width: 100%;
+    margin-bottom: 1rem;
+}
+
+.notes-app {
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 16px;
+}
+
+.notes-app header {
+    margin-bottom: 1.5rem;
+}
+
+.home-page h2 {
+    margin-bottom: 1.5rem;
+}
+
+.notes-list {
+  margin-top: 32px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 16px;
+  padding: 16px 8px;
+}
+
+.note-item {
+  padding: 16px;
+  border-radius: 8px;
+  border: 1px solid;
+  border-top: 5px solid;
+  aspect-ratio: 1 / 1;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+.note-item__title {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  margin-bottom: 4px;
+}
+
+.note-item__date {
+  font-size: 12px;
+  margin-bottom: 8px;
+  color: #aaa;
+}
+
+.note-item__body {
+  font-size: 14px;
+}
+
+.note-item__action {
+  display: flex;
 }
