--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -82,6 +82,56 @@ header {
   font-size: 14px;
 }
 
+.note-item__delete-button {
+  width: 48px;
+  height: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+  cursor: pointer;
+  font-size: 1.5rem; 
+  padding: 8px;
+  border: 1px solid grey;
+}
+
+.note-item__delete-button:hover {
+  background-color: #f8d7da; /* warna merah muda ringan */
+  border-radius: 4px;
+}
+
+
 .note-item__action {
   display: flex;
+}
+
+.note-detail h5 {
+  margin-block: 0.3rem;
+  font-weight: normal;
+  font-size: 12px;
+}
+
+.note-detail p {
+  margin-bottom: 2rem;
+}
+
+.add-note h1 {
+  margin-bottom: 2rem;
+}
+
+.note-input {
+  display: flex;
+  flex-direction: column;
+}
+
+.note-input input {
+  max-width: 20vw;
+  min-height: 2rem;
+  margin-bottom: 1rem;
+  padding: 0.2rem;
+}
+
+.note-input button {
+  max-width: 20vw;
+  min-height: 2rem;
 }
